DependencyProperty.UnsetValue now fails PType checks. Exceptions are now printed using Debug.WriteLine(). Adds QuickMultiConverter class. Adds ExternalConverter property to MultiBinding class. Adds exception counter to converters. Adjusts parameter and value arrays in converters to be in numeric order (instead of in order of appearance in the converter expression).

--- a/QuickConverter.csproj
+++ b/QuickConverter.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Operator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickConverter.cs" />
+    <Compile Include="QuickMultiConverter.cs" />
     <Compile Include="Tokens\ArgumentListToken.cs" />
     <Compile Include="Tokens\ArrayAccessToken.cs" />
     <Compile Include="Tokens\AssignmentToken.cs" />
