--- a/QuickConverter.csproj
+++ b/QuickConverter.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -47,25 +49,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binding.cs" />
+    <Compile Include="ChainedConverterExceptionEventArgs.cs" />
     <Compile Include="ConverterParameterMode.cs" />
     <Compile Include="DataContainer.cs" />
     <Compile Include="DynamicMultiConverter.cs" />
     <Compile Include="DynamicSingleConverter.cs" />
     <Compile Include="EquationTokenizer.cs" />
+    <Compile Include="MarkupExtensionExceptionEventArgs.cs" />
     <Compile Include="MultiBinding.cs" />
     <Compile Include="Operator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickConverter.cs" />
     <Compile Include="QuickConverterEventArgs.cs" />
     <Compile Include="QuickConverterEventType.cs" />
+    <Compile Include="QuickEvent.cs" />
+    <Compile Include="QuickEventHandler.cs" />
     <Compile Include="QuickMultiConverter.cs" />
+    <Compile Include="RuntimeEventHandlerExceptionEventArgs.cs" />
     <Compile Include="RuntimeMultiConvertExceptionEventArgs.cs" />
     <Compile Include="RuntimeSingleConvertExceptionEventArgs.cs" />
     <Compile Include="TokenizationFailureEventArgs.cs" />
     <Compile Include="TokenizationSuccessEventArgs.cs" />
     <Compile Include="Tokens\ArgumentListToken.cs" />
-    <Compile Include="Tokens\IndexerToken.cs" />
     <Compile Include="Tokens\AssignmentToken.cs" />
+    <Compile Include="Tokens\IndexerToken.cs" />
+    <Compile Include="Tokens\LambdaAssignmentToken.cs" />
     <Compile Include="Tokens\AsToken.cs" />
     <Compile Include="Tokens\BinaryOperatorToken.cs" />
     <Compile Include="Tokens\BracketedToken.cs" />
@@ -80,6 +88,7 @@
     <Compile Include="Tokens\NullPropagatingToken.cs" />
     <Compile Include="Tokens\ParameterToken.cs" />
     <Compile Include="Tokens\PostTokenChainToken.cs" />
+    <Compile Include="QuickValue.cs" />
     <Compile Include="Tokens\StaticFunctionToken.cs" />
     <Compile Include="Tokens\StaticMemberToken.cs" />
     <Compile Include="Tokens\TernaryOperatorToken.cs" />
